--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kj-react-redux-form",
-  "version": "1.5.33",
-  "description": "Create Forms Easily with React and Redux",
+  "version": "1.5.35",
+  "description": "Create Forms Easily with React and Redux (forked from react-redux-form)",
   "main": "lib/index.js",
   "typings": "react-redux-form.d.ts",
   "scripts": {
@@ -29,22 +29,23 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/davidkpiano/react-redux-form.git"
+    "url": "git+https://github.com/KijijiCA/react-redux-form.git"
   },
   "keywords": [
     "redux",
     "form",
     "redux-form",
     "react-redux-form",
+    "kj-react-redux-form",
     "react",
     "reactjs"
   ],
-  "author": "David Khourshid <davidkpiano@gmail.com> (http://github.com/davidkpiano)",
+  "author": "Dmitri Farkov <dfarkov@ebay.ca>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/davidkpiano/react-redux-form/issues"
+    "url": "git+https://github.com/KijijiCA/react-redux-form.git"
   },
-  "homepage": "https://github.com/davidkpiano/react-redux-form#readme",
+  "homepage": "git+https://github.com/KijijiCA/react-redux-form.git#readme",
   "devDependencies": {
     "babel-cli": "^6.5.1",
     "babel-core": "^6.5.2",
@@ -72,9 +73,8 @@
     "jsdom": "^9.2.1",
     "lodash": "~4.17.2",
     "mocha": "^2.5.1",
-    "react": "~15.4.1",
-    "react-addons-test-utils": "~15.4.1",
-    "react-dom": "~15.4.1",
+    "react": "^16.0.0-beta.2",
+    "react-dom": "^16.0.0-beta.2",
     "react-redux": "~5.0.0",
     "redux": "^3.3.1",
     "redux-immutable": "^3.0.8",
@@ -91,16 +91,19 @@
   },
   "dependencies": {
     "icepick": "^1.1.0",
+    "immutable": "^3.7.6",
     "invariant": "~2.2.1",
     "lodash.get": "~4.4.2",
     "lodash.identity": "^3.0.0",
     "lodash.setwith": "^4.3.2",
     "lodash.topath": "~4.5.2",
-    "immutable": "^3.7.6"
+    "prop-types": "^15.5.10",
+    "raf": "^3.3.2",
+    "react-addons-shallow-compare": "^15.6.0"
   },
   "peerDependencies": {
-    "react": "^0.14.0 || ^15.0.0",
-    "react-dom": "^0.14.7 || ^15.0.0",
+    "react": "^0.14.0 || ^15.0.0 || ^16.0.0",
+    "react-dom": "^0.14.7 || ^15.0.0 || ^16.0.0",
     "react-redux": "^4.0.0 || ^5.0.0",
     "redux": "^3.0.0"
   }
